# GameDesign

./: .clang-format  .gitignore  A Link to the Past.sln  A Link to the Past.vcxproj  A Link to the Past.vcxproj.filters  CMakeLists.txt  Makefile  README.md  README.txt  Rebound.sln  Rebound.vcxproj  Rebound.vcxproj.filters  devtool_readme.txt  rebound.exe.manifest  todo.txt
src/engine/: AffineTransform.cpp  AffineTransform.h  AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionSystem.cpp  CollisionSystem.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  EnvironmentObject.cpp  EnvironmentObject.h  Game.cpp  Game.h  HealthBar.cpp  HealthBar.h  HitObject.cpp  HitObject.h  InteractiveObject.cpp  InteractiveObject.h  Layer.cpp  Layer.h  QuestManager.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  StatBar.cpp  StatBar.h  TextObject.cpp  TextObject.h  WalkOnObject.cpp  WalkOnObject.h  (+3 more)
src/engine/enemies/: Archer.cpp  Archer.h  Arrow.cpp  Arrow.h  BaseEnemy.cpp  BaseEnemy.h  CMakeLists.txt  CannonBall.cpp  Cannoneer.cpp  Cannoneer.h  Enemy.cpp  IceAttack.cpp  IceAttack.h  KingdomArcher.cpp  KingdomArcher.h  KingdomKing.cpp  KingdomKing.h  KingdomMage.cpp  KingdomMage.h  Knight.cpp  Knight.h  Mage.cpp  Mage.h  MageAttack.cpp  MageAttack.h  MasterArcher.cpp  MasterArcher.h  MonsterKing.cpp  MonsterKing.h  Ogre.cpp  Ogre.h  Orc.cpp  Orc.h  PoisonBomb.cpp  PoisonBomb.h  Poisoner.cpp  Poisoner.h  Projectile.cpp  Projectile.h  Roar.cpp  (+8 more)
src/engine/events/: CMakeLists.txt  ClickEvent.cpp  ClickEvent.h  Collision.cpp  Collision.h  DisplayTreeChangeEvent.cpp  DisplayTreeChangeEvent.h  DragEvent.cpp  DragEvent.h  DragStartEvent.cpp  DragStartEvent.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  GameOverEvent.cpp  GameOverEvent.h  GameQuitEvent.cpp  GameQuitEvent.h  GameStartEvent.cpp  GameStartEvent.h  KeyDownEvent.cpp  KeyDownEvent.h  MouseDownEvent.cpp  (+27 more)
(+175 files in other folders)
